--- a/src/app/features/presentation-definition/components/home/home.component.scss
+++ b/src/app/features/presentation-definition/components/home/home.component.scss
@@ -1,18 +1,8 @@
+@use '/src/template' as temp;
 :host {
-    .vc-box-bottom {
-        align-items: center;
-        display: flex;
-        flex-flow: column wrap;
-        justify-content: center;
-        width: 100%;
-
-        :first-child {
-            width: 100%;
-        }
-    }
-
-    .vc-box-display-error p {
-        color: red;
-        font-style: italic;
+    .wrapper {
+      background-color: map-get(map-get(map-get(temp.$palette, general), bg), default);
+      padding: temp.$spaceBasic;
+      border-radius: 16px;
     }
 }
