--- a/src/app/shared/elements/button/button.component.scss
+++ b/src/app/shared/elements/button/button.component.scss
@@ -1,36 +1,36 @@
+@use '/src/template' as temp;
 :host {
     button {
         &:disabled {
-            background: rgb(99 93 255 / 50%);
+            // background: rgb(99 93 255 / 50%);
             cursor: none;
             opacity: 0.7;
             pointer-events: none;
         }
 
         border: 0;
-        border-radius: 8px;
-        color: rgb(255 255 255);
+        border-radius: 16px;
+        color: hsl(0, 0%, 99%);
         cursor: pointer;
-        font-family: Inter;
         font-size: 16px;
-        font-style: normal;
-        font-weight: 500;
-        height: 80px;
-        letter-spacing: -0.01px;
-        line-height: 24px;
-        margin-top: 16px;
+        height: 48px;
         padding: 1rem;
         transition: background 225ms ease-in-out 0s;
+        -webkit-user-select: none;
         user-select: none;
-        width: inherit;
+        width: fit-content;
 
         &.primary {
-            background: rgb(99 93 255);
+            background: map-get(map-get(temp.$palette, color), primary);
         }
 
-        &.white {
-            background: rgb(255 255 255);
+        &.secondary {
+            background: temp.$backgroundPaper;
             color: rgb(0 0 0);
+            border: 1px;
+            border-radius: 1em;
+            border-style: solid;
+            border-color: temp.$dividerDark;
         }
     }
 
