--- a/src/app/features/siop-custom/components/home/home.component.html
+++ b/src/app/features/siop-custom/components/home/home.component.html
@@ -1,5 +1,5 @@
 <vc-wallet-layout>
-  <div body class="container">
+  <div body class="container-responsive">
     <h5 body-title >OID4VP + CBOR selectable</h5>
     <div [ngClass]="{'bg-panel': !isCreatePage}">
         <router-outlet></router-outlet>
