--- a/src/layout-breakpoint.scss
+++ b/src/layout-breakpoint.scss
@@ -1,8 +1,9 @@
 $breakpoints: (
-  xs: 425,
-  sm: 576px,
-  md: 768px,
-  lg: 992px,
-  xl: 1200px,
-  xxl: 1400px
+    xs: 360px,
+    xs1: 361px,
+    sm: 576px,
+    md: 768px,
+    lg: 992px,
+    xl: 1200px,
+    xxl: 1400px
 );
