--- a/src/app/shared/elements/button/button.component.scss
+++ b/src/app/shared/elements/button/button.component.scss
@@ -1,4 +1,5 @@
 @use '/src/template' as temp;
+
 :host {
     button {
         &:disabled {
@@ -10,13 +11,12 @@
 
         border: 0;
         border-radius: 16px;
-        color: hsl(0, 0%, 99%);
+        color: hsl(0deg 0% 99%);
         cursor: pointer;
         font-size: 16px;
         height: 48px;
         padding: 1rem;
         transition: background 225ms ease-in-out 0s;
-        -webkit-user-select: none;
         user-select: none;
         width: fit-content;
 
@@ -26,11 +26,11 @@
 
         &.secondary {
             background: temp.$backgroundPaper;
-            color: rgb(0 0 0);
             border: 1px;
+            border-color: temp.$dividerDark;
             border-radius: 1em;
             border-style: solid;
-            border-color: temp.$dividerDark;
+            color: rgb(0 0 0);
         }
     }
 
