--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -2,12 +2,13 @@
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
 @use '@angular/material' as mat;
+
 // Plus imports for other components in your app.
 
 // Include the common styles for Angular Material. We include this here so that you only
 // have to load a single css file for Angular Material in your app.
 // Be sure that you only ever include this mixin once!
-@include mat.core();
+@include mat.core;
 
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
@@ -21,11 +22,11 @@ $verifier-ui-warn: mat.define-palette(mat.$red-palette);
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
 $verifier-ui-theme: mat.define-light-theme((
-  color: (
-    primary: $verifier-ui-primary,
-    accent: $verifier-ui-accent,
-    warn: $verifier-ui-warn,
-  )
+    color: (
+        primary: $verifier-ui-primary,
+        accent: $verifier-ui-accent,
+        warn: $verifier-ui-warn,
+    )
 ));
 
 // Include theme styles for core and each component used in your app.
@@ -34,18 +35,18 @@ $verifier-ui-theme: mat.define-light-theme((
 @include mat.all-component-themes($verifier-ui-theme);
 
 .mat-mdc-radio-button.mat-primary {
-  --mdc-radio-disabled-selected-icon-color: #000;
-  --mdc-radio-disabled-unselected-icon-color: #000;
-  --mdc-radio-unselected-focus-icon-color: #212121;
-  --mdc-radio-unselected-hover-icon-color: #212121;
-  --mdc-radio-unselected-icon-color: rgba(0, 0, 0, 0.54);
-  --mdc-radio-unselected-pressed-icon-color: rgba(0, 0, 0, 0.54);
-  --mdc-radio-selected-focus-icon-color: #2A5ED9;
-  --mdc-radio-selected-hover-icon-color: #2A5ED9;
-  --mdc-radio-selected-icon-color: #2A5ED9;
-  --mdc-radio-selected-pressed-icon-color: #2A5ED9;
-  --mat-mdc-radio-ripple-color: #000;
-  --mat-mdc-radio-checked-ripple-color: #2A5ED9;
+    --mdc-radio-disabled-selected-icon-color: #000;
+    --mdc-radio-disabled-unselected-icon-color: #000;
+    --mdc-radio-unselected-focus-icon-color: #212121;
+    --mdc-radio-unselected-hover-icon-color: #212121;
+    --mdc-radio-unselected-icon-color: rgb(0 0 0 / 54%);
+    --mdc-radio-unselected-pressed-icon-color: rgb(0 0 0 / 54%);
+    --mdc-radio-selected-focus-icon-color: #2A5ED9;
+    --mdc-radio-selected-hover-icon-color: #2A5ED9;
+    --mdc-radio-selected-icon-color: #2A5ED9;
+    --mdc-radio-selected-pressed-icon-color: #2A5ED9;
+    --mat-mdc-radio-ripple-color: #000;
+    --mat-mdc-radio-checked-ripple-color: #2A5ED9;
 }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+body { font-family: Roboto, "Helvetica Neue", sans-serif; margin: 0; }
