--- a/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
+++ b/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
@@ -39,6 +39,9 @@
                     color: temp.$textDarkPrimary;
                     cursor: pointer;
                 }
+                a {
+                  margin-top: temp.$spaceBasic;
+                }
             }
         }
     }
