--- a/src/app/features/wallet-redirect/wallet-redirect.component.html
+++ b/src/app/features/wallet-redirect/wallet-redirect.component.html
@@ -1,7 +1,7 @@
 <vc-wallet-layout>
   <div body class="container ">
-    <h5 body-title >get response code</h5>
-    <div class="qr-container">
+    <!-- <h5 body-title >get response code</h5> -->
+    <div class="display-container">
       <vc-presentations-results [results]="data" *ngIf="data"></vc-presentations-results>
     </div>
   </div>
