--- a/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
+++ b/src/app/features/verifiable-credential/components/qr-code/qr-code.component.scss
@@ -8,6 +8,24 @@
         flex-direction: column;
         min-width: temp.$min-body-width;
 
+        .authorize {
+          border: 0;
+          border-radius: 16px;
+          color: hsl(0, 0%, 99%);
+          cursor: pointer;
+          font-size: 16px;
+          height: 20px;
+          padding: 1rem;
+          margin: 1rem 0;
+          transition: background 225ms ease-in-out 0s;
+          -webkit-user-select: none;
+          user-select: none;
+          width: -moz-fit-content;
+          width: fit-content;
+          background: map-get(map-get(temp.$palette, color), primary);
+          text-decoration: none;
+        }
+
         .body {
             align-items: center;
             display: flex;
