--- a/src/app/features/home/components/home/home.component.html
+++ b/src/app/features/home/components/home/home.component.html
@@ -1,6 +1,6 @@
 <vc-wallet-layout>
   <div body class="container ">
-    <h5 body-title >Choose an authentication method</h5>
+    <h5 body-title >Authenticate by sharing your PID</h5>
     <vc-radio-group [options]="options" (choseEvent)="navigate($event)"></vc-radio-group>
     <vc-body-actions [actions]="actions" (clicked)="submit()"></vc-body-actions>
   </div>
