--- a/src/app/features/cbor/home/home.component.html
+++ b/src/app/features/cbor/home/home.component.html
@@ -1,6 +1,6 @@
 <vc-wallet-layout>
   <div body class="container">
-    <h5 body-title >OID4VP + CBOR</h5>
+    <h5 body-title >Proceed to authentication</h5>
     <div class="bg-panel">
         <router-outlet></router-outlet>
     </div>
