--- a/src/app/features/verifiable-credential/components/presentations-results/presentations-results.component.html
+++ b/src/app/features/verifiable-credential/components/presentations-results/presentations-results.component.html
@@ -1,6 +1,6 @@
 <div class="show-result" >
   <div class="d-flex id-token" *ngIf="results.idToken.length > 0">
-    <h6>Results from ID token </h6>
+    <h6> Shared Authentication details </h6>
     <mat-list>
       <mat-list-item *ngFor="let option of results.idToken">
         <span matListItemTitle>{{option.key}}</span>
@@ -9,7 +9,7 @@
     </mat-list>
   </div>
   <div class="d-flex vp-token" *ngIf="results.vpToken.length > 0">
-    <h6> Results from VP token </h6>
+    <h6> Shared Authentication details </h6>
     <mat-list>
       <mat-list-item *ngFor="let option of results.vpToken">
         <span matListItemTitle>{{option.key}}</span>
