--- a/src/app/features/presentation-definition/components/home/home.component.html
+++ b/src/app/features/presentation-definition/components/home/home.component.html
@@ -1,6 +1,6 @@
 <vc-wallet-layout>
   <div body class="container">
-    <h5 body-title >OID4VP Custom</h5>
+    <h5 body-title >Proceed to authentication</h5>
     <div class="wrapper">
         <router-outlet></router-outlet>
     </div>
