--- a/src/app/features/siop-custom/components/home/home.component.html
+++ b/src/app/features/siop-custom/components/home/home.component.html
@@ -1,6 +1,6 @@
 <vc-wallet-layout>
   <div body class="container-responsive">
-    <h5 body-title >OID4VP + CBOR selectable</h5>
+    <h5 body-title >Proceed to authentication</h5>
     <div [ngClass]="{'bg-panel': !isCreatePage}">
         <router-outlet></router-outlet>
     </div>
