--- a/src/app/features/verifiable-credential/components/qr-code/qr-code.component.html
+++ b/src/app/features/verifiable-credential/components/qr-code/qr-code.component.html
@@ -1,5 +1,5 @@
 <div class="vc-verifiable-credential" [ngClass]="{'view-json': displayButtonJWTObject}">
-  <div class="body">
+  <div>
       <div *ngIf="!hasResult && isDesktop" class="qr-info">
         <p>Scan the QR code with your phone's camera app</p>
       </div>
