--- a/src/app/features/verifiable-credential/components/qr-code/qr-code.component.html
+++ b/src/app/features/verifiable-credential/components/qr-code/qr-code.component.html
@@ -1,13 +1,13 @@
 <div class="vc-verifiable-credential" [ngClass]="{'view-json': displayButtonJWTObject}">
   <div>
-      <div *ngIf="!hasResult && isDesktop" class="qr-info">
+      <div *ngIf="!hasResult && isDesktop" class="qr-info" style="text-align: center">
         <p>Scan the QR code with your phone's camera app</p>
       </div>
-      <div class="qr-code" [ngClass]="{'green-bg': hasResult}">
+      <div class="qr-code body" [ngClass]="{'green-bg': hasResult}">
         <div #qrCode id="qrcode"></div>
         <vc-presentations-results [results]="results" *ngIf="results"></vc-presentations-results>
       </div>
-      <div *ngIf="!hasResult && isDesktop" class="qr-info">
+      <div *ngIf="!hasResult && isDesktop" class="qr-info" style="text-align: center">
         <p> - OR - </p>
       </div>
   </div>
