--- a/src/app/features/verifiable-credential/components/qr-code/qr-code.component.html
+++ b/src/app/features/verifiable-credential/components/qr-code/qr-code.component.html
@@ -1,12 +1,15 @@
 <div class="vc-verifiable-credential" [ngClass]="{'view-json': displayButtonJWTObject}">
-  <div class="body">
-      <div class="qr-code" [ngClass]="{'green-bg': hasResult}">
+  <div>
+      <div *ngIf="!hasResult && isDesktop" class="qr-info" style="text-align: center">
+        <p>Scan the QR code with your phone's camera app</p>
+      </div>
+      <div class="qr-code body" [ngClass]="{'green-bg': hasResult}">
         <div #qrCode id="qrcode"></div>
         <vc-presentations-results [results]="results" *ngIf="results"></vc-presentations-results>
       </div>
-      <div *ngIf="!hasResult && isDesktop" class="qr-info">
-        <p>Scan the QR code <br/> with your phone's camera app</p>
+      <div *ngIf="!hasResult && isDesktop" class="qr-info" style="text-align: center">
+        <p> - OR - </p>
       </div>
   </div>
-    <a class="authorize" [href]="redirectUrl">AUTHORIZE</a>
+  <a class="authorize" [href]="redirectUrl">AUTHENTICATE WITH WALLET</a>
 </div>
