Fix 'Authenticate with wallet' visibility bug

--- a/src/app/features/verifiable-credential/components/qr-code/qr-code.component.html
+++ b/src/app/features/verifiable-credential/components/qr-code/qr-code.component.html
@@ -11,5 +11,7 @@
         <p> - OR - </p>
       </div>
   </div>
-  <a class="authorize" [href]="redirectUrl">AUTHENTICATE WITH WALLET</a>
+  <div *ngIf="!hasResult">
+    <a class="authorize" [href]="redirectUrl">AUTHENTICATE WITH WALLET</a>
+  </div>
 </div>
