--- a/src/app/features/presentation-definition/components/presentation-request/presentation-request.component.scss
+++ b/src/app/features/presentation-definition/components/presentation-request/presentation-request.component.scss
@@ -4,8 +4,8 @@
     vc-editor {
         max-height: temp.$max-body-height;
         max-width: temp.$max-body-width;
-        min-height: temp.$min-body-height;;
-        min-width: temp.$min-body-height;;
+        min-height: temp.$min-body-height;
+        min-width: temp.$min-body-height;
     }
 
     .vc-box-display-error p {
