--- a/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.html
+++ b/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.html
@@ -2,7 +2,7 @@
   <div class="creation">
     <div class="creation-header">
       <h3>Select the information requested from the user</h3>
-      <span>{{definitionFields.length - 2}} selected</span>
+      <span>{{definitionFields.length}} selected</span>
     </div>
       <ng-container  *ngFor="let field of fields; index as idx; trackBy: trackByFn" >
         <div class="controls">
