--- a/src/app/features/home/components/home/home.component.scss
+++ b/src/app/features/home/components/home/home.component.scss
@@ -1,4 +1,5 @@
 @use '/src/template' as temp;
+@use '/src/layout-breakpoint' as points;
 
 :host {
   .container {
@@ -53,6 +54,21 @@
       }
       .mat-mdc-tab-labels:first-child {
         margin-left: 4px;
+      }
+      @media (max-width: map-get(points.$breakpoints, xs)) and  (min-width: map-get(points.$breakpoints, sm)){
+        .mat-mdc-tab-body-wrapper {
+          min-width: unset;
+        }
+      }
+      @media (max-width: map-get(points.$breakpoints, sm)) {
+        .mat-mdc-tab-body-wrapper {
+          min-width: unset;
+        }
+      }
+      @media (max-width: map-get(points.$breakpoints, md)) and (min-width: map-get(points.$breakpoints, sm)){
+        .mat-mdc-tab-body-wrapper {
+          min-width: unset;
+        }
       }
     }
   }
