--- a/src/app/features/home/components/home/home.component.html
+++ b/src/app/features/home/components/home/home.component.html
@@ -1,24 +1,31 @@
 <vc-wallet-layout>
   <div body class="container ">
     <mat-tab-group animationDuration="0ms" (selectedIndexChange)="selectedIndexChange($event)">
-      <mat-tab #authentication label="PID authentication">
-        <ng-container *ngIf="authentication.isActive">
+      <mat-tab #pid label="PID authentication">
+        <ng-container *ngIf="pid.isActive">
           <vc-input-scheme></vc-input-scheme>
-          <vc-radio-group [options]="optionsPIDAuthentication" (choseEvent)="navigate($event)"></vc-radio-group>
+          <vc-radio-group [options]="optionsPIDAuthentication" (choseEvent)="setNavigateTarget($event)"></vc-radio-group>
           <vc-body-actions [actions]="actions" (clicked)="submit()"></vc-body-actions>
         </ng-container>
       </mat-tab>
-      <mat-tab #verification label="Age verification">
-        <ng-container *ngIf="verification.isActive">
+      <mat-tab #mdl label="mDL authentication">
+        <ng-container *ngIf="mdl.isActive">
           <vc-input-scheme></vc-input-scheme>
-          <vc-radio-group [options]="optionsAgeVerification" (choseEvent)="navigate($event)"></vc-radio-group>
+          <vc-radio-group [options]="optionsMDLAuthentication" (choseEvent)="setNavigateTarget($event)"></vc-radio-group>
+          <vc-body-actions [actions]="actions" (clicked)="submit()"></vc-body-actions>
+        </ng-container>
+      </mat-tab>
+      <mat-tab #ageVerification label="Age verification">
+        <ng-container *ngIf="ageVerification.isActive">
+          <vc-input-scheme></vc-input-scheme>
+          <vc-radio-group [options]="optionsAgeVerification" (choseEvent)="setNavigateTarget($event)"></vc-radio-group>
           <vc-body-actions [actions]="actions" (clicked)="submit()"></vc-body-actions>
         </ng-container>
       </mat-tab>
       <mat-tab #customRequest label="Custom request">
         <ng-container *ngIf="customRequest.isActive">
           <vc-input-scheme></vc-input-scheme>
-          <vc-radio-group [options]="optionsCustomRequest" (choseEvent)="navigate($event)"></vc-radio-group>
+          <vc-radio-group [options]="optionsCustomRequest" (choseEvent)="setNavigateTarget($event)"></vc-radio-group>
           <vc-body-actions [actions]="actions" (clicked)="submit()"></vc-body-actions>
         </ng-container>
       </mat-tab>
