--- a/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.html
+++ b/src/app/features/siop-custom/components/create-a-scenario/create-a-scenario.component.html
@@ -2,9 +2,9 @@
   <div class="creation">
     <div class="creation-header">
       <h3>Select the information requested from the user</h3>
-      <span>{{definitionFields.length}} selected</span>
+      <span>{{selectedFields.length}} selected</span>
     </div>
-      <ng-container  *ngFor="let field of fields; index as idx; trackBy: trackByFn" >
+      <ng-container  *ngFor="let field of formFields; index as idx; trackBy: trackByFn" >
         <div class="controls">
           <mat-checkbox (click)="handle(field)" color="primary">
             {{field.label}}
@@ -19,5 +19,5 @@
       Presentation definition
     </mat-panel-title>
   </mat-expansion-panel-header>
-  <vc-editor [code]="definitionText"></vc-editor>
+  <vc-editor [code]="presentationDefinitionText"></vc-editor>
 </mat-expansion-panel>
