--- a/src/app/shared/elements/open-logs/open-logs.component.html
+++ b/src/app/shared/elements/open-logs/open-logs.component.html
@@ -3,7 +3,7 @@
     <mat-dialog-content class="mat-typography">
       <div class="dialog-container">
         <div *ngIf="isInspectLogs" class="inspect-logs">
-            <form >
+            <form class="example-form">
               <mat-form-field class="example-full-width">
                 <mat-label>Transaction ID</mat-label>
                 <input type="scheme" matInput [formControl]="schemeControl" [errorStateMatcher]="matcher" placeholder="type a transaction ID">
