Responsive layout fix when presenting results in same device scenario

--- a/src/app/features/wallet-redirect/wallet-redirect.component.html
+++ b/src/app/features/wallet-redirect/wallet-redirect.component.html
@@ -1,6 +1,6 @@
 <vc-wallet-layout>
-  <div body class="container ">
-    <div class="display-container">
+  <div body class="container">
+    <div class="bg-panel">
       <vc-presentations-results [concludedTransaction]="concludedTransaction" *ngIf="concludedTransaction"></vc-presentations-results>
     </div>
   </div>
