Moved scheme config to top menu, present summary of presentation request, init transaction with collected

--- a/src/app/core/layout/wallet-layout/wallet-layout-header/wallet-layout-header.component.html
+++ b/src/app/core/layout/wallet-layout/wallet-layout-header/wallet-layout-header.component.html
@@ -9,4 +9,7 @@
     <button mat-menu-item>
       <a id="inspectLogs" (click)="inspectLogs()">Inspect transaction logs</a>
     </button>
+    <button mat-menu-item>
+      <a id="customScheme" (click)="changeCustomScheme()">Change default scheme</a>
+    </button>
   </mat-menu>
