--- a/src/app/features/selectable-presentation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.html
+++ b/src/app/features/selectable-presentation/components/selectable-attestation-attributes/selectable-attestation-attributes.component.html
@@ -29,5 +29,6 @@
 </mat-dialog-content>
 
 <mat-dialog-actions align="end">
+  <button mat-button mat-dialog-close (click)="saveSelection()" >Save</button>
   <button mat-button mat-dialog-close>Close</button>
 </mat-dialog-actions>
