Added link for custom request preparation

--- a/src/app/features/presentation-request-preparation/home/home.component.html
+++ b/src/app/features/presentation-request-preparation/home/home.component.html
@@ -51,5 +51,10 @@
     </form>
   </mat-stepper>
 
+  <p>
+    Or, if this doesn't work for you, go straight to defining your presentation request
+    <a routerLink="/custom-request" routerLinkActive="active">here</a>
+  </p>
+
 </div>
 </vc-wallet-layout>
